--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ margin-left: 50px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-list__link.current:after {
+.menu-list__link--current:after {
   position: absolute;
   content: '';
   width: 100%;
@@ -145,7 +145,7 @@ margin-left: 50px;
   color: var(--accent);
 }
 
-.menu-list__link.current {
+.menu-list__link--current {
   color: var(--accent);
 }
 
@@ -742,14 +742,15 @@ color: #FFFFFF;
 /* --------main-portfolio */
 
 
-.filtr {
+.filtr-list {
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
  
  }
 
- .btn-filtr {
+ .filtr-list__btn {
+   font-family: inherit;
   display: inline-block;
   text-align: center;
   align-items: center;
@@ -757,70 +758,70 @@ color: #FFFFFF;
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
+  font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
   transition: 
   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
- .btn-filtr:hover,
-.btn-filtr:focus {
+ .filtr-list__btn:hover,
+.filtr-list__btn:focus {
   background-color: #2196f3;
   color: var(--white);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-  .filtr-item:not(:last-child) {
+  .filtr-list__item:not(:last-child) {
     margin-right: 8px;
   }
-
-.title-group {
-  padding: 20px 24px;
-  border-right-width: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;
-  border-left: 1px solid #EEEEEE;
-}
-
-.portfolio-top {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--text);
-  margin-bottom: 4px;
-}
-
-.portfolio-text {
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: var(--main-text);
-}
-
-.portfolio-list {
+  
+  .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.portfolio-item {
+.portfolio-list__item {
   flex-basis: calc(100%/3-30px);
   margin-left: 30px;
   margin-top: 30px;
  }
+
+.portfolio-list__item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio-list__item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+
+ .portfolio-link:hover .portfolio-top-wrap__text,
+ .portfolio-link:focus .portfolio-top-wrap__text  {
+  transform: translateY(0%);
+ }
+
+  .portfolio-link {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
  .portfolio-top-wrap {
    position: relative;
    overflow: hidden;
  }
 
- .portfolio-link:hover .portfolio-top-text,
- .portfolio-link:focus .portfolio-top-text  {
-  transform: translateY(0%);
- }
-
-  .portfolio-top-text {
+.portfolio-top-wrap__text {
     position: absolute;
     top: 0;
     background: rgba(33, 150, 243, 0.9);
@@ -838,22 +839,29 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 overflow: auto;
   }
 
-  .portfolio-link {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-.portfolio-link:hover,
-.portfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.title-group {
+  padding: 20px 24px;
+  border-right-width: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
 }
 
-.portfolio-item:nth-child(3n) {
-  margin-right: 0;
+.title-group__top {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--text);
+  margin-bottom: 4px;
 }
 
-.portfolio-item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+.title-group__text {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--main-text);
 }
+
 
 /* -------Модальное окно------ */
 
@@ -866,6 +874,12 @@ overflow: auto;
   transition: opacity 250ms, visibility 250ms;
 }
 
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+}
 .backdrop.is-hidden .modal {
   transform: scale(0.5) rotate(-290deg);
 }
@@ -885,16 +899,7 @@ transition: transform 250ms;
 transform: translate(-50%, -50%) scale(1) rotate(0);
 }
 
-.modal-field:not(:last-child) {
-  margin-bottom: 10px;
-}
-
-.check-text {
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -907,19 +912,12 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal__close-btn:hover,
+.modal__close-btn:focus {
   fill: var(--accent);
 }
 
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-
-}
-
-.modal-title {
+.modal__title {
 font-weight: 700;
 font-size: 20px;
 line-height: 1.15;
@@ -929,12 +927,12 @@ color: #212121;
 margin-bottom: 12px;
 }
 
-.modal-icon {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.modal-field:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.modal-input-wrap {
+  position: relative;
 }
 
 .modal-input {
@@ -946,11 +944,6 @@ padding-left: 40px;
 outline: none;
 transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-input-wrap {
-  position: relative;
-}
- 
 
 .modal-input::placeholder {
   color: var(--main-text);
@@ -965,12 +958,22 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid var(--accent);
 }
 
+.modal-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
 .modal-input:hover + .modal-icon,
 .modal-input:focus + .modal-icon {
   fill: var(--accent);
 }
 
-.modal-label {
+.modal-field__label {
 display: block;
 text-align: left;
 margin-bottom: 4px;
@@ -980,7 +983,10 @@ line-height: 1.17;
 letter-spacing: 0.01em;
 color: #757575;
 }
-
+.check-text {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
 .modal-submit-btn {
   font-family: inherit;
   font-weight: 700;
