--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -18,7 +18,7 @@
   }
   
   .team-list__item:not(:last-child) {
-    flex-basis: calc(100%/3-30px);
+    flex-basis: calc(100%/4 - 30px);
     margin-right: 30px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -28,7 +28,7 @@
   }
   
   .team-list__item {
-    flex-basis: calc(100%/3-30px);
+    flex-basis: calc(100%/4 - 30px);
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
