--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,5 @@
 @import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/modal";
+@import "./layout/portfolio-btn";
 @import "./layout/portfolio";
