--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,4 @@
 @charset "UTF-8";
-body {
-  font-family: Roboto, sans-serif;
-  color: #FFFFFF;
-}
-
 p,
 h1,
 h2,
@@ -28,6 +23,11 @@ button {
   cursor: pointer;
 }
 
+body {
+  font-family: Roboto, sans-serif;
+  color: #FFFFFF;
+}
+
 .link {
   text-decoration: none;
   display: block;
@@ -49,6 +49,16 @@ button {
   margin: 0 auto;
 }
 
+:root {
+  --main-text: #757575;
+  --text: #212121;
+  --accent: #2196f3;
+  --white: #ffffff;
+  --footer-mail: rgba(255, 255, 255, 0.6);
+  --background: #2f303a;
+  --background-team: #f5f4fa;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -60,16 +70,6 @@ button {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
-}
-
-:root {
-  --main-text: #757575;
-  --text: #212121;
-  --accent: #2196f3;
-  --white: #ffffff;
-  --footer-mail: rgba(255, 255, 255, 0.6);
-  --background: #2f303a;
-  --background-team: #f5f4fa;
 }
 
 .site {
@@ -510,7 +510,6 @@ button {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
 .contacts .conteiner {
   display: flex;
   align-items: baseline;
@@ -541,14 +540,13 @@ button {
 .contacts-list {
   display: block;
 }
+.contacts-list .contacts-list__item + .contacts-list__item {
+  margin-top: 9px;
+}
 
 .contacts-link {
   display: block;
   margin-bottom: 20px;
-}
-
-.contacts-list .contacts-list__item + .contacts-list__item {
-  margin-top: 9px;
 }
 
 .contacts-link-adress {
@@ -568,9 +566,7 @@ button {
   color: var(--footer-mail);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contacts-link-mail:hover,
-.contacts-link-tel:hover {
+.contacts-link-mail:hover {
   color: var(--accent);
 }
 
@@ -581,6 +577,9 @@ button {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-link-tel:hover {
+  color: var(--accent);
 }
 
 /* ---Присоединяйтесь--- */
@@ -616,9 +615,7 @@ button {
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contacts-soc-link:hover,
-.contacts-soc-link:focus {
+.contacts-soc-link:hover, .contacts-soc-link:focus {
   background-color: var(--accent);
 }
 
