--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -5,19 +5,16 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms, visibility 250ms;
-  }
+  &.is-hidden .modal {
+    transform: scale(0.5) rotate(-290deg);
+  }}
   
   .is-hidden {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
-  
   }
-  .backdrop.is-hidden .modal {
-    transform: scale(0.5) rotate(-290deg);
-  }
-  
-  
+
   .modal {
     position: absolute;
     width: 528px;
@@ -30,9 +27,7 @@
   left: 50%;
   transition: transform 250ms;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  }
-  
-  .modal__close-btn {
+  &__close-btn {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -42,15 +37,11 @@
    background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-  }
-  
-  .modal__close-btn:hover,
-  .modal__close-btn:focus {
+  &:hover, &:focus {
     fill: var(--accent);
   }
-  
-  .modal__title {
+  }
+&__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -59,6 +50,8 @@
   color: #212121;
   margin-bottom: 12px;
   }
+}
+  
   
   .modal-field:not(:last-child) {
     margin-bottom: 10px;
@@ -76,20 +69,17 @@
   padding-left: 40px;
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .modal-input::placeholder {
+  &::placeholder {
     color: var(--main-text);
   }
-  
-  .modal-input:valid {
+&:valid {
     border-color: #2196f3;
   }
-  
-  .modal-input:hover,
-  .modal-input:focus {
+  &:hover, &:focus {
     border: 1px solid var(--accent);
   }
+}
+  
   
   .modal-icon {
     position: absolute;
@@ -97,14 +87,10 @@
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  
-  
-  .modal-input:hover + .modal-icon,
-  .modal-input:focus + .modal-icon {
+  .modal-input:hover + &,
+  .modal-input:focus + & {
     fill: var(--accent);
-  }
+  }}
   
   .modal-field__label {
   display: block;
@@ -116,10 +102,12 @@
   letter-spacing: 0.01em;
   color: #757575;
   }
+
   .check-text {
     margin-top: 20px;
     margin-bottom: 30px;
   }
+
   .modal-submit-btn {
     font-family: inherit;
     font-weight: 700;
@@ -161,23 +149,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  }
-  
-  .check-text::before {
+  &::before {
     content: '';
     width: 16px;
     height: 15px;
     border: 2px solid #212121;
     margin-right: 8px;
-  }
-  
-  .input-check:checked + .check-text::before {
+  .input-check:checked + & {
     background-color: var(--accent);
     border: none;
     background-image: url(../images/icons/Vector\ \(4\).svg);
     background-repeat: no-repeat;
     background-position: center;
-  }
+  }}}
+  
+  
   
   .input-check:focus + .check-text::before {
     border-color: var(--accent);
