--- a/sass/layout/_portfolio-btn.scss
+++ b/sass/layout/_portfolio-btn.scss
@@ -14,10 +14,7 @@
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
-   
-   }
-  
-   .filtr-list__btn {
+   &__btn {
      font-family: inherit;
     display: inline-block;
     text-align: center;
@@ -36,11 +33,9 @@
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  
-   .filtr-list__btn:hover,
-  .filtr-list__btn:focus {
+    &:hover, &:focus {
     background-color: #2196f3;
     color: var(--white);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  }
+  }}
+   }
