--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -11,42 +11,32 @@
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
-  }
-  
-  .portfolio-list__item {
+  &__item {
     flex-basis: calc(100%/3 - 30px);
     margin-left: 30px;
     margin-top: 30px;
-   }
-  
-  .portfolio-list__item:nth-child(3n) {
+   &:nth-child(3n) {
     margin-right: 0;
   }
-  
-  .portfolio-list__item:nth-last-child(-n+3) {
+  &:nth-last-child(-n+3) {
     margin-bottom: 0;
   }
+}
+  }
   
-   .portfolio-link:hover .portfolio-top-wrap__text,
-   .portfolio-link:focus .portfolio-top-wrap__text  {
-    transform: translateY(0%);
-   }
+   
   
     .portfolio-link {
       transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  
-  .portfolio-link:hover,
-  .portfolio-link:focus {
+      &:hover, &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+    }
   
    .portfolio-top-wrap {
      position: relative;
      overflow: hidden;
-   }
-  
-  .portfolio-top-wrap__text {
+   &__text {
       position: absolute;
       top: 0;
       background: rgba(33, 150, 243, 0.9);
@@ -62,16 +52,20 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
-    }
+    .portfolio-link:hover &,
+   .portfolio-link:focus &  {
+    transform: translateY(0%);
+   }
+  }
+}
+
   
   .title-group {
     padding: 20px 24px;
     border-right-width: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
-  }
-  
-  .title-group__top {
+  &__top {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -79,11 +73,11 @@
     color: var(--text);
     margin-bottom: 4px;
   }
-  
-  .title-group__text {
+  &__text {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--main-text);
   }
+}
   
