--- a/sass/layout/_site.scss
+++ b/sass/layout/_site.scss
@@ -2,20 +2,7 @@
     padding-top: 25px;
     padding-bottom: 25px;
     border-bottom: 1px solid #ECECEC;
-  }
-  
-  .site .conteiner {
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-  }
-  
-  .navigation {
-    display: flex;
-    align-items: center;
-  }
-  
-  .site__logo {
+    &__logo {
     font-family: "Raleway";
     font-weight: 700;
     font-size: 26px;
@@ -24,26 +11,23 @@
     color: var(--accent);
     display: block;
   }
-  
-  .site__logo-web {
+  &__logo-web {
     color: var(--accent);
   }
-  
-  .site__logo-studio {
+  &__logo-studio {
     color: var(--text);
   }
-  
-  .menu-list  {
+  .conteiner {
     display: flex;
     align-items: center;
-    margin-left: 93px;
+    box-sizing: border-box;
   }
+}
   
-  .navigation .menu-list__item+.menu-list__item {
-  margin-left: 50px;
-  }
-  
-  .navigation .menu-list__link {
+  .navigation {
+    display: flex;
+    align-items: center;
+  .menu-list__link {
     position: relative;
     font-weight: 500;
     font-size: 14px;
@@ -52,9 +36,13 @@
     color: var(--text);
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  }}
   
-  .menu-list__link--current:after {
+  .menu-list  {
+    display: flex;
+    align-items: center;
+    margin-left: 93px;
+  &__link--current:after {
     position: absolute;
     content: '';
     width: 100%;
@@ -63,6 +51,10 @@
     height: 2px;
     border-radius: 2px;
     bottom: -34px;
+  }}
+  
+  .navigation .menu-list__item+.menu-list__item {
+  margin-left: 50px;
   }
   
   .menu-list__link:hover,
@@ -92,30 +84,26 @@
     display: block;
     fill: currentColor;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-  
-  .contacts-nav__item .site-mail {
+     .contacts-nav__item & {
     display: flex;
     align-items: center;
   }
+    &:hover, &:focus {
+      color: var(--accent);
+    }
+    }
   
   .site-mail__icon {
     margin-right: 10px;
-  }
-  
-  .site-mail:hover,
-  .site-mail:focus,
-  .site-mail__icon:hover,
-  .site-mail__icon:focus {
+    &:hover, &:focus {
     color: var(--accent);
   }
-  
-  .site-mail:hover .site-mail__icon {
+  .site-mail:hover & {
     fill: var(--accent);
   }
-  
-  .site-mail:focus .site-mail__icon {
+  .site-mail:focus & {
     fill: var(--accent);
+  }
   }
   
   .site-tel {
@@ -127,32 +115,25 @@
     display: block;
     fill: var(--main-text);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .site-tel:hover,
-  .site-tel:focus,
-  .site-tel__icon:hover,
-  .site-tel__icon:focus {
-    color: var(--accent);
-  }
-  
-  .site-tel:hover .site-tel__icon {
-    fill: var(--accent);
-  }
-  
-  .site-tel:focus .site-tel__icon {
-    fill: var(--accent);
-  }
-  
-  
-  .contacts-nav__item .site-tel {
+    .contacts-nav__item & {
     display: flex;
     align-items: center;
+  }
+    &:hover, &:focus {
+      color: var(--accent);
   }
   
   .site-tel__icon {
     margin-right: 10px;
     fill: var(--main-text);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .site-tel:hover & {
+    fill: var(--accent);
   }
-  
+  .site-tel:focus & {
+    fill: var(--accent);
+  }
+    &:hover, &:focus {
+      color: var(--accent);
+  }
+}
