--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,8 +1,6 @@
 .team {
     background-color: var(--background-team);
-  }
-  
-  .team__title {
+  &__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -10,14 +8,12 @@
     letter-spacing: 0.03em;
     color: var(--text);
     margin-bottom: 50px;
-  }
+  }}
   
   .team-list {
     display: flex;
     flex-wrap: wrap;
-  }
-  
-  .team-list__item:not(:last-child) {
+  &__item:not(:last-child) {
     flex-basis: calc(100%/4 - 30px);
     margin-right: 30px;
     background: #FFFFFF;
@@ -26,23 +22,20 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px; 
   }
-  
-  .team-list__item {
+&__item {
     flex-basis: calc(100%/4 - 30px);
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    
   }
+}
   
   .team-group {
     padding-top: 30px;
     padding-bottom: 30px;
-  }
-  
-  .team-group__title {
+  &__title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -51,8 +44,7 @@
     color: var(--text);
     margin-bottom: 10px;
   }
-  
-  .team-group__text {
+&__text {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -60,15 +52,14 @@
     color: var(--main-text);
     margin-bottom: 16px;
   }
+}
   
   .team-group-list {
     display: flex;
     justify-content: center;
-  }
-  
-  .team-group-list__item+.team-group-list__item {
+  &__item + &__item {
     margin-left: 10px;
-  }
+  }}
   
   .team-group-link {
     width: 44px;
@@ -79,22 +70,18 @@
     justify-content: center;
     align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+      background-color: var(--accent);
   }
-  
-  .team-group-link:hover, 
-  .team-group-link:focus {
-    background-color: var(--accent);
-  }
-  
-  .team-group-link:hover .team-group-link__icon {
-    fill: var(--white);
-  }
-  
-  .team-group-link:focus .team-group-link__icon {
-    fill: var(--white);
   }
   
   .team-group-link__icon {
     fill: #AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .team-group-link:hover & {
+    fill: var(--white);
   }
+  
+  .team-group-link:focus & {
+    fill: var(--white);
+  }}
