--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,11 @@
 @import "./base/reset";
+@import "./base/common";
 
 @import "./components/size";
+@import "./components/conteiner";
 
 @import "./utils/vars";
+@import "./utils/hidden";
 
 @import "./layout/site";
 @import "./layout/hero";
