--- a/sass/layout/_activity.scss
+++ b/sass/layout/_activity.scss
@@ -1,11 +1,8 @@
 .activity {
     padding-bottom: 94px;
   &__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    @include font{36px, 1.17, 700, 0.03em}
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--text);
     margin-bottom: 50px;
   }
@@ -21,6 +18,7 @@
     margin-right: 30px;
   }
 &__title {
+  @include font{14px, 1.14, null, 0.03em}
     position: absolute;
     display: block;
     justify-content: center;
@@ -31,8 +29,6 @@
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
-    font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white);
