--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,9 +1,6 @@
 .clients__title {
-    font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  @include font{36px, 1.17, 700, 0.03em}
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--text);
   margin-bottom: 50px;
   }
