--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,10 +11,7 @@
     max-width: 1600px;
     margin: 0 auto;
     &__title-text {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
+      @include font{44px, 1.36, 900, 0.06em}
     text-transform: uppercase;
     text-align: center;
     color: var(--white);
