--- a/sass/layout/_peculiar.scss
+++ b/sass/layout/_peculiar.scss
@@ -17,18 +17,13 @@
     align-items: center;
     margin-bottom: 30px;
   &__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
+    @include font{14px, 1.14, 700, 0.03em}
     text-transform: uppercase;
     color: var(--text);
     margin-bottom: 10px;
   }
 &__text {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+  @include font{14px, 1.71, null, 0.03em}
     color: var(--main-text);
   }
 }
