--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -37,17 +37,14 @@
      position: relative;
      overflow: hidden;
    &__text {
+    @include font{18px, 1.56, 400, 0.03em}
       position: absolute;
       top: 0;
       background: rgba(33, 150, 243, 0.9);
       color: var(--white);
       width: 100%;
-      font-weight: 400;
       padding: 63px 24px;
       justify-content: center;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -66,17 +63,12 @@
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
   &__top {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+    @include font{18px, 2, 700, 0.06em}
     color: var(--text);
     margin-bottom: 4px;
   }
   &__text {
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+    @include font{16px, 1.88, null, 0.03em}
     color: var(--main-text);
   }
 }
