--- a/sass/layout/_site.scss
+++ b/sass/layout/_site.scss
@@ -1,13 +1,10 @@
 .site {
+  @include font{26px, 1.19, 700, 0.03em}
     padding-top: 25px;
     padding-bottom: 25px;
     border-bottom: 1px solid #ECECEC;
     &__logo {
     font-family: "Raleway";
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
     color: var(--accent);
     display: block;
   }
@@ -28,11 +25,8 @@
     display: flex;
     align-items: center;
   .menu-list__link {
+    @include font{14px, 1.14, 500, 0.02em}
     position: relative;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
     color: var(--text);
     display: block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -76,10 +70,7 @@
   }
   
   .site-mail {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+    @include font{14px, 1.14, 500, 0.02em}
     color: var(--main-text);
     display: block;
     fill: currentColor;
@@ -107,10 +98,7 @@
   }
   
   .site-tel {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+    @include font{14px, 1.14, 500, 0.02em}
     color: var(--main-text);
     display: block;
     fill: var(--main-text);
