--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,11 +1,8 @@
 .team {
     background-color: var(--background-team);
   &__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    @include font{36px, 1.17, 700, 0.03em}
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--text);
     margin-bottom: 50px;
   }}
@@ -33,22 +30,18 @@
 }
   
   .team-group {
+    
     padding-top: 30px;
     padding-bottom: 30px;
   &__title {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
+    @include font{16px, 1.19, 500, 0.03em}
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--text);
     margin-bottom: 10px;
   }
 &__text {
-    font-size: 16px;
-    line-height: 1.19;
+  @include font{16px, 1.19, null, 0.03em}
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--main-text);
     margin-bottom: 16px;
   }
