--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "./utils/vars";
 @import "./utils/hidden";
+@import "./utils/mixins";
 
 @import "./layout/site";
 @import "./layout/hero";
